--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-</head>
-<body>
-  <ul class="task-list">
-    <% @tasks.each do |task| %>
-    <li><%= task[:title] %></li>
-    <% end %>
-  </ul>
-</body>
-</html>
+<h2>Tasks</h2>
+<ul class="task-list">
+  <% @tasks.each do |task| %>
+  <li><%= task[:task] %></li>
+  <% end %>
+</ul>
