--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,1 +1,17 @@
-<h2>Shows</h2>
+<h2>Task Details</h2>
+<p>
+  <strong>Name:</strong>
+  <%= @task.action %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @task.description %>
+</p>
+
+<p>
+  <strong>Completion date:</strong>
+  <%= @task.completion_date %>
+</p>
+
+<%= link_to "Go Back to All Tasks", tasks_path %>
