added url and method to new.html.erb to be more specific

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,4 +8,6 @@
     <%= link_to "View details", task_path(task.id) %>
   </li>
   <% end %>
+
+  <%= link_to "Add new book", new_task_path %>
 </ul>
