--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -24,7 +24,7 @@
   <% end %>
 
   <div>
-    <%= link_to "(Add new book)", new_task_path %>
+    <%= link_to "(Add new task)", new_task_path %>
   </div>
 
 
