--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -11,5 +11,5 @@
   <%= f.label :completion_date %>
   <%= f.date_field :completion_date %>
 
-  <%= f.submit "Create New Task", tasks_path %>
+  <%= f.submit "Create New Task" %>
 <% end %>
